# wordsearch-api

./: CONTRIBUTING.md  README.md  openapi.yaml
android/: README.md  build.gradle
android/src/main/java/com/apiverve/client/: APIClient.java
android/src/main/java/com/apiverve/wordsearch/: APIClient.java  APIException.java  APIResponse.java
android/src/main/java/com/apiverve/wordsearch/data/: ResponseModels.java
examples/: README.md
examples/csharp/: basic.cs
examples/java/: basic.java
examples/javascript/: basic.js  error-handling.js
examples/python/: basic.py
go/: README.md  client.go  go.mod  types.go
npm/: README.md  index.d.ts  index.js  package.json
npm/examples/: basic.js
nuget/: Readme.md  ResponseObj.cs  WordSearchGeneratorAPIClient.cs  WordSearchGeneratorAPIClient.csproj  WordSearchGeneratorAPIClient.sln  WordSearchGeneratorQueryOptions.cs
python/: README.md  pyproject.toml
python/src/apiverve_wordsearchgenerator/: __init__.py  apiClient.py  exceptions.py  setup.py  setup_dep.py
python/src/apiverve_wordsearchgenerator/tests/: test_api.py
python/tests/: test_api.py
